--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="shortcut icon" href="public/favicon.svg" type="image/x-icon">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <title>Vite + React + TS</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
